--- a/web/i18n/messages/cn.json
+++ b/web/i18n/messages/cn.json
@@ -89,15 +89,50 @@
     },
     "technology": {
       "title": "技术能力",
-      "subtitle": "专业的技术团队和完善的技术体系"
+      "subtitle": "专业的技术团队和完善的技术体系",
+      "overview_title": "技术概览",
+      "overview_description": "我们拥有完整的技术体系和专业的研发团队，为客户提供从设计到测试的全流程技术支持。",
+      "highlight_1_title": "先进工艺",
+      "highlight_1_desc": "采用最新的封装工艺和设计理念",
+      "highlight_2_title": "快速响应",
+      "highlight_2_desc": "专业团队快速响应客户需求",
+      "highlight_3_title": "质量保证",
+      "highlight_3_desc": "严格的质量控制体系确保产品质量",
+      "capability_1_title": "先进封装技术",
+      "capability_1_desc": "晶圆级封装、系统级封装等先进技术",
+      "capability_2_title": "硬件设计能力",
+      "capability_2_desc": "PCB设计、电路仿真、系统集成",
+      "capability_3_title": "测试验证服务",
+      "capability_3_desc": "功能测试、性能验证、可靠性测试",
+      "capability_4_title": "技术咨询服务",
+      "capability_4_desc": "技术方案咨询、工艺优化建议"
     },
     "cases": {
       "title": "成功案例",
-      "subtitle": "为多个行业客户提供专业的技术解决方案"
+      "subtitle": "为多个行业客户提供专业的技术解决方案",
+      "overview_title": "服务覆盖",
+      "overview_description": "我们的服务覆盖多个行业领域，为客户提供专业的技术解决方案和优质的服务体验。",
+      "sector_1_title": "通信设备",
+      "sector_1_desc": "5G通信、基站设备、网络设备",
+      "sector_2_title": "消费电子",
+      "sector_2_desc": "智能手机、平板电脑、可穿戴设备",
+      "sector_3_title": "工业控制",
+      "sector_3_desc": "自动化设备、传感器、控制系统",
+      "sector_4_title": "医疗设备",
+      "sector_4_desc": "医疗仪器、诊断设备、监护设备",
+      "sector_5_title": "汽车电子",
+      "sector_5_desc": "车载电子、自动驾驶、新能源汽车",
+      "process_title": "设计流程"
     },
     "news": {
       "title": "新闻动态",
-      "more": "查看更多"
+      "more": "查看更多",
+      "news_1_title": "SIPUMTECH获得ISO9001质量管理体系认证",
+      "news_1_excerpt": "公司通过ISO9001质量管理体系认证，标志着我们在质量管理方面达到了国际先进水平。",
+      "news_2_title": "公司新增先进封装产线投入使用",
+      "news_2_excerpt": "新的先进封装产线正式投入使用，大幅提升了公司的生产能力和技术水平。",
+      "news_3_title": "SIPUMTECH参加2024年电子封装技术大会",
+      "news_3_excerpt": "公司技术团队参加行业技术大会，展示最新的封装技术和解决方案。"
     },
     "contact": {
       "title": "联系我们",
@@ -107,7 +142,7 @@
       "phone_title": "联系电话",
       "phone": "15318923490",
       "email_title": "邮箱地址",
-      "email": "wenqiang.chang@sipumtech.com",
+      "email": "wenqiang.chang\\@sipumtech.com",
       "certification_title": "资质认证",
       "form": {
         "name_placeholder": "请输入您的姓名",
